[package]
name = "cavity-cli"
version = "1.1.0"
authors = ["Andrey Cherkashin <with.out@me.com>"]
license = "BSD-2-Clause"
description = "Create files padded with zeros. Alternatinve to macOS's mkfile."
repository = "https://github.com/Inner-Heaven/cavity"
readme = "../README.md"
categories = ["command-line-utilities"]

[dependencies]
cavity = "1.1.0"
clap = "2"